apps/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: bazarr
      app.kubernetes.io/name: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: bazarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 15m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/media
              name: media
            - mountPath: /mnt/downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: longhorn-bazarr-data
        - name: media
          persistentVolumeClaim:
            claimName: smb-media-claim
        - name: downloads
          persistentVolumeClaim:
            claimName: sab-downloads-pvc
